Improved code view